@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 10-06-2006 added: set source thumbnail in gui. access from context menu.
  - 09-06-2006 fixed: Watched status is preserved across views, rather than being separate.
  - 09-06-2006 fixed: Recursive slideshow is only enabled if there are subfolders
  - 09-06-2006 fixed: Thumbloader would attempt to open .rar and .zip in Music and Videos.
